增加bmob appid,更新azure-sdk到3.4.0版本

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
         <item>14. SQL语句查询</item>
         <item>15. 短信服务</item>
         <item>16. 表结构</item>
+        <item>16. Azure Todo</item>
     </string-array>
 
     <string-array name="bmob_crud_list">
